fix: modal, overflow

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   font-size: 16px;
   background: linear-gradient(70deg, #F2F2F2 70%, #D9D5D2);
   color: #403C3A;
+  overflow-x: hidden;
 }
 
 ::selection {
@@ -228,6 +229,69 @@ ul.skills_content,.skills_content>li {list-style: none;margin: 0; padding-left: 
 .container-fluid a {
   margin: 2rem auto;
 }
+.who_list{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  height: 100px;
+  padding: 0;
+  /* perspective: 1000px; */
+}
+.who_list li {
+  display: inline-block;
+  width: 10%;
+  height: 100%;
+  background: linear-gradient(to bottom, #F2F2F2 , #e9e6e4);
+  border: 1px solid #73706e16;
+  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.1);
+  border-top: none;
+  animation: paper_left 1s infinite;
+  color: #A6A3A1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notion>a {
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 0.5s;
+  color: #313131;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+}
+.notion i{
+  font-size: 28px;
+  border-radius: 8px;
+  border: 3px solid #73706e;
+  padding: 0.5rem;
+  margin: 0 auto;
+  color: #313131;
+}
+.notion p{
+  margin: 0.5rem 0 0 0;
+  color: #313131;
+}
+.notion:hover{
+  /* 애니메이션 멈춤 */
+  animation-play-state: paused;
+  cursor: pointer;
+  height: 130%;
+  transition: all 0.5s;
+  background: linear-gradient(to bottom, #F2F2F2, #e1dedc);
+  /* transform: rotateX(40deg);  */
+}
+.who_list li:nth-child(2) {animation-delay: 0.1s;}
+.who_list li:nth-child(4) {animation-delay: 0.2s;}
+
+@keyframes paper_left {
+  0% {transform: skewX(0deg) rotateX(0);}
+  70% {transform: skewX(-15deg) rotateX(0);}
+  100% {transform: skewX(0deg) rotateX(0);}
+}
+
+
 
 /* portfolio */
 #portfolio {
